Recreated sample form

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -8,7 +8,19 @@
 </head>
 <body>
     <form>
-        
+        <img>
+        <h1>Get in touch</h1>
+        <h6>Good choice...</h6>
+        <input type="text" placeholder="Your name please">
+        <input type="email" placeholder="A contact email">
+        <select type="dropdown" >
+            <option disabled selected>About a new project</option>
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+        </select>
+        <textarea placeholder="How can I help?"></textarea>
+        <button>Send Message</button>
     </form>
 </body>
 </html>
