Updated dropdown menu items

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,26 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../Styles/styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../Styles/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
     <title>Form</title>
-</head>
-<body>
+  </head>
+  <body>
     <form>
-        <img>
-        <h1>Get in touch</h1>
-        <h6>Good choice...</h6>
-        <input type="text" placeholder="Your name please">
-        <input type="email" placeholder="A contact email">
-        <select type="dropdown" >
-            <option disabled selected>About a new project</option>
-            <option value="1">1</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-        </select>
-        <textarea placeholder="How can I help?"></textarea>
-        <button>Send Message</button>
+      <img src="../Assets/x-mark-24.png"/>
+      <h1>Get in touch</h1>
+      <p>Good choice...</p>
+      <input type="text" placeholder="Your name please" />
+      <input type="email" placeholder="A contact email" />
+      <select type="dropdown">
+        <option disabled selected>About a new project</option>
+        <option value="1">HTML Project</option>
+        <option value="2">CSS Project</option>
+        <option value="3">Javascript Project</option>
+      </select>
+      <textarea placeholder="How can I help?" rows="6"></textarea>
+      <button>Send Message</button>
     </form>
-</body>
+  </body>
 </html>
